--- a/contacto.html
+++ b/contacto.html
@@ -25,11 +25,11 @@
                         <a class="menuItem" href="index.html" id="inicio">INICIO</a>
                     </li>
                     <li>
-                        <a class="menuItem" href="pagina-1.html" id="productos">PRODUCTOS</a>
+                        <a class="menuItem" href="productos.html" id="productos">PRODUCTOS</a>
                     </li>
         
                     <li>
-                        <a class="menuItem" href="pagina-2.html" id="contacto">CONTACTO</a>
+                        <a class="menuItem" href="contacto.html" id="contacto">CONTACTO</a>
                     </li>
                 </ul>
                 </div>
